src/test/deca/syntax/invalid/no_OBRACE.deca
//  Description :
//            Pas de { au début du fichier
//
// Résultat:
//no viable alternative at input 'println'
//

   println("Hello") ; 
}   